--- a/src/scss/components/Header.module.scss
+++ b/src/scss/components/Header.module.scss
@@ -21,12 +21,20 @@
               color: #FF0064;
             }
         }
-        span {
-          font-family: 'Proxoma Nova';
-          font-style: normal;
-          font-weight: 400;
-          font-size: 1rem;
-          color: #7B7B7B;
+        h4 {
+            font-family: 'Proxoma Nova';
+            font-weight: 800;
+            font-size: 1rem;
+            letter-spacing: 0.01em;
+            // text-transform: uppercase;
+            color:#FF0064;
+          span {
+            font-family: 'Proxoma Nova';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 1rem;
+            color:#5a00e6;
+          }
         }
       }
     }
